src/GCPnts/GCPnts_DistFunction.hxx
@@ -23,7 +23,7 @@ class gp_Pnt;
 
 //! Class to define function, which calculates square distance between point on curve
 //! C(u), U1 <= u <= U2 and line passing through points C(U1) and C(U2)
-//! This function is used in any minimisation algorithm to define maximal deviation between curve and line,
+//! This function is used in any minimization algorithm to define maximal deviation between curve and line,
 //! which required one variable function without derivative (for ex. math_BrentMinimum)
 class GCPnts_DistFunction : public math_Function
 {
